fix: make sure the seconds don't jump around

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -23,3 +23,7 @@ h6 {
   font-family: 'Roboto Mono', monospace;
   font-weight: 500;
 }
+
+.monospace {
+  font-family: 'Roboto Mono', monospace;
+}
